--- a/client/blocks/login/style.scss
+++ b/client/blocks/login/style.scss
@@ -433,7 +433,7 @@
 	}
 
 	.auth-form__separator {
-		margin-bottom: 2rem;
+		margin: 2rem 0;
 	}
 }
 
